# nexus

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  test.yml
clients/: README.md
clients/php/: nexus.php
clients/python/: nexus.py
clients/typescript/: nexus.ts
config/: nexus.toml.example
docs/: NQL-specification.md  README.md  architecture-ru.md  guide-ru.md
src/: lib.rs  main.rs  types.rs
src/engine/: analytics.rs  auth.rs  constraints.rs  distributed.rs  indexing.rs  mod.rs  multimodel.rs  query_planner.rs  replication.rs  sharding.rs
src/monitoring/: mod.rs  telemetry.rs
src/protocol/: mod.rs  rest_api.rs  tcp.rs
src/query/: aggregates.rs  cte.rs  dml.rs  executor.rs  fulltext.rs  functions.rs  joins.rs  mod.rs  optimization.rs  optimizer.rs  parser.rs  planning.rs  window_functions.rs
src/sql/: mod.rs  parser.rs
src/storage/: caching.rs  mod.rs  mvcc.rs  persistence.rs  transactions.rs
tests/: integration_tests.rs  transaction_tests.rs
