[package]
name = "nexus_db"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
# Сетевые протоколы
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "1.1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SQL парсер
sqlparser = "0.45"

# Хранилище и индексы
dashmap = "5.5"
parking_lot = "0.12"
lru = "0.12"

# Утилиты
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"

# Криптография и хеширование
sha2 = "0.10"
blake3 = "1.5"
base64 = "0.21"

# Компрессия
zstd = "0.13"

# Vector DB
ndarray = "0.15"
approx = "0.5"

# Для бенчмарков
criterion = "0.5"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
